[package]
name = "blocking-dialog"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mq1/blocking-dialog-rs"
homepage = "https://github.com/mq1/blocking-dialog-rs"
description = "Minimal desktop dialog implementation"

[dependencies]
thiserror = "2.0"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "NSString",
  "NSArray",
  "NSURL",
  "NSEnumerator",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "block2",
  "objc2-uniform-type-identifiers",
  "NSAlert",
  "NSView",
  "NSApplication",
  "NSResponder",
  "NSImage",
  "NSWindow",
  "NSButton",
  "NSControl",
  "NSOpenPanel",
  "NSPanel",
  "NSSavePanel",
] }
objc2-uniform-type-identifiers = { version = "0.3", default-features = false, features = [
  "UTType",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = ">=0.59, <=0.62", features = [
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell_Common",
  "Win32_System",
  "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = "0.17"
